// Protocol buffer definitions for the API. See
// https://developers.google.com/protocol-buffers/
//
// The `isReady` service is a required service for all Arrow services.
// It is used to determine if the service is ready to accept requests.

syntax = "proto3";
package grpc;

service RpcService {
    rpc is_ready (ReadyRequest) returns (ReadyResponse);
    rpc get_pricing (PricingRequests) returns (PricingResponse);
}

// Ready Request object
message ReadyRequest {
    // No arguments
}

// Ready Response object
message ReadyResponse {

    // True if ready
    bool ready = 1;
}

// An array of pricing requests.
message PricingRequests {
    // An array of pricing requests.
    repeated PricingRequest requests = 1;
}

// Get the price for a type of service.
//
// Two required fields:
// - `service_type`: the type of service. 0 = cargo, 1 = rideshare, 2 =
//   charter
// - `distance`: the distance of the trip in km
message PricingRequest {
    // service type
    // 0 = cargo
    // 1 = rideshare
    // 2 = charter
    ServiceType service_type = 1;
    // distance in kilometers
    float distance_km = 2;
    // weight in kg
    float weight_kg = 3;

    // Service type
    enum ServiceType {
        // Cargo service that can transport goods.
        CARGO = 0;
        // Rideshare service that can transport passengers.
        RIDESHARE = 1;
        // Charter service that can be reserved for a specific trip.
        CHARTER = 2;
    }
}

// Pricing for a service.
//
// It contains an array of prices, one for each requested leg of the
// trip.
message PricingResponse {
    // price in dollars
    repeated float prices = 1;
}
